--- a/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.css
+++ b/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.css
@@ -41,13 +41,13 @@
 
 
 .linea{
-display:flex;
-justify-content: center;
-width: 650px;
-background:#1d1a1a;
-margin-bottom: 20px;
-margin-top: 20px;
-height: 1px;
+    display:flex;
+    justify-content: center;
+    width: 650px;
+    background:#1d1a1a;
+    margin-bottom: 20px;
+    margin-top: 20px;
+    height: 1px;
 }
 
 input{
@@ -72,7 +72,8 @@ input{
 width: 100px;
 
 }
+
 .titulo{
-    padding-top: 5px;
+    padding: 8.8px;
 }
 
