--- a/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
+++ b/frontend_facturacion/proyecto_jas/src/app/components/pagina-principal/pagina-principal.component.html
@@ -1,48 +1,46 @@
 <section class="fondo_principal">
-
-    <!-- Button trigger modal -->
-
-
-    <div class=" titulo d-flex justify-content-end align-items-center">
-        <button type="button" class="  titulo fw-bolder fs-5 btn btn- d-flex " data-bs-toggle="modal"
-            data-bs-target="#staticBackdrop">
+    <!-- Titulo y Botón de Registro -->
+    <div class="d-flex justify-content-end align-items-center titulo">
+        <button type="button" class="titulo fw-bolder fs-5 btn btn- d-flex" data-bs-toggle="modal" data-bs-target="#staticBackdrop">
             Registrarse
         </button>
+        <button class="btn btn fw-bolder fs-5" data-bs-target="#mod2" data-bs-toggle="modal">
+            Iniciar sesión
+        </button>
         <div class="pe-5 nav-item">
-            <a class=" titulo text-decoration-none fw-bolder fs-5 texto1 nav-link" href="">Ayuda ?</a>
+            <a class="text-decoration-none fw-bolder fs-5 texto1 nav-link" href="">Ayuda ?</a>
         </div>
     </div>
 
-    <!-- Modal -->
+    <!-- Modal de Registro -->
     <div class="modal fade" id="staticBackdrop" data-bs-backdrop="static" data-bs-keyboard="false" tabindex="-1"
         aria-labelledby="staticBackdropLabel" aria-hidden="true">
         <div class="modal-dialog">
             <div class="modal-content">
                 <div class="modal-header">
-                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Formulario de registro </h1>
+                    <h1 class="modal-title fs-5" id="staticBackdropLabel">Formulario de registro</h1>
                     <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                 </div>
                 <div class="modal-body">
-                    <form [formGroup]="formPrincipal" (ngSubmit)="RegistroUsuario()" class=" caja-modal">
-                        <span>Nombre/s</span>
+                    <form [formGroup]="formPrincipal" (ngSubmit)="RegistroUsuario()" class="caja-modal">
+                        <span>Nombre/s:</span>
                         <input type="text" id="nombre" name="nombre" required formControlName="nombres">
 
-                        <span>Apellido/s</span>
+                        <span>Apellido/s:</span>
                         <input type="text" id="apellido" name="apellido" required formControlName="apellidos">
 
-                        <span>Contraseña</span>
+                        <span>Correo Electrónico:</span>
+                        <input type="email" id="email" name="correoElectronico" required formControlName="correoElectronico">
+
+                        <span>Contraseña:</span>
                         <input type="password" id="contrasena" name="clave" required formControlName="clave">
 
-                        <span>Confirmar clave</span>
+                        <span>Confirmar clave:</span>
                         <input type="password" id="contrasena" name="clave" required formControlName="rectificar_clave">
 
                         <span>Fecha de Nacimiento:</span>
-                        <input type="date" id="fecha_nacimiento" name="fechaNacimiento" required
-                            formControlName="fechaNacimiento">
+                        <input type="date" id="fecha_nacimiento" name="fechaNacimiento" required formControlName="fechaNacimiento">
 
-                        <span>Correo Electrónico:</span>
-                        <input type="email" id="email" name="correoElectronico" required
-                            formControlName="correoElectronico">
                         <button type="submit" class="btn btn-primary">Registrarse</button>
                     </form>
                 </div>
@@ -50,167 +48,102 @@
         </div>
     </div>
 
-
-
-</section>
-
-<div class="row">
-    <div class="col-4 offset-4 columna-menu">
-        <section class="d-flex justify-content-center align-items-center flex-column h-100">
-            <img class="img1" src="img/LOGO STADISTIC.png" alt="">
-            <section class="slider-opciones mt-5 slider1">
-                <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
-                    <div class="carousel-inner">
-                        <div class="carousel-item active">
-                            <img src="img/icono_pizza.png" class="d-block w-25" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/camisa.png" class="d-block w-25" alt="...">
-                        </div>
-                        <div class="carousel-item">
-                            <img src="img/copas.png" class="d-block w-25" alt="...">
-                        </div>
+    <!-- Modal de Inicio de Sesión -->
+    <div class="pe-3 nav-item">
+        <div class="modal fade" id="mod2" aria-hidden="true" aria-labelledby="mod21" tabindex="-1">
+            <div class="modal-dialog modal-dialog-centered">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <h1 class="modal-title fs-5" id="mod21">Iniciar sesión</h1>
+                        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
                     </div>
-                    <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
-                        data-bs-slide="prev">
-                        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Previous</span>
-                    </button>
-                    <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
-                        data-bs-slide="next">
-                        <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                        <span class="visually-hidden">Next</span>
-                    </button>
-                </div>
-                <button
-                    class="btn btn fs-5 fw-bolder"
-                    data-bs-target="#exampleModalToggle"
-                    data-bs-toggle="modal">
-                    Registrate
-                </button>
-
-            <div class="pe-3 nav-item">
-                <div class="modal fade"id="mod2"aria-hidden="true"aria-labelledby="mod21"tabindex="-1">
-                    <div class="modal-dialog modal-dialog-centered">
-                            <div class="modal-body">
-                                <main>
-                                    <section class="caja2">
-                                        <form class="mb-4 form bg-white p-4 d-flex flex-column align-items-center rounded">
-                                            <input type="text"placeholder="Correo electronico"/>
-                                            <input type="password" placeholder="Contraseña"/>
-                                            <div class="mb-3">
-                                                <a href="#" class="text-dark justify-content-center"
-                                                    >¿Olvidaste la contraseña?</a>
-                                            </div>
-                                            <button type="button" class="btn btn text-white botonInicio">Iniciar sesion</button>
-                                        </form>
-                                    </section>
-                                </main>
-                            </div>
+                    <div class="modal-body">
+                        <main>
+                            <section class="caja2">
+                                <form class="mb-4 form bg-white p-4 d-flex flex-column align-items-center rounded">
+                                    <input type="text" placeholder="Correo electrónico" class="form-control mb-3" />
+                                    <input type="password" placeholder="Contraseña" class="form-control mb-3" />
+                                    <div class="mb-3">
+                                        <a href="#" class="text-dark justify-content-center text-decoration-none fw-bold">¿Olvidaste la contraseña?</a>
+                                    </div>
+                                    <button type="button" class="btn btn-primary text-white botonInicio">Iniciar sesión</button>
+                                </form>
+                            </section>
+                        </main>
                     </div>
                 </div>
-                <button class="btn btn fw-bolder fs-5" data-bs-target="#mod2"data-bs-toggle="modal">
-                    Iniciar sesión
-                </button>
             </div>
-            <div class="pe-5 nav-item">
-                <a class="text-decoration-none fw-bolder fs-5 texto1 nav-link" href=""
-                    >Ayuda ?</a>
-            </div>
+        </div>
+    </div>
 
-
-
-    <div class="row">
+    <!-- Sección Principal -->
+    <div>
         <div class="col-4 offset-4 columna-menu">
             <section class="d-flex justify-content-center align-items-center flex-column h-100">
                 <img class="img1" src="img/LOGO STADISTIC.png" alt="">
                 <section class="slider-opciones mt-5 slider1">
                     <div id="carouselExampleAutoplaying" class="carousel slide" data-bs-ride="carousel">
                         <div class="carousel-inner">
-                            <section>
-                                <div class="carousel-item active">
-                                    <img src="img/icono_pizza.png" class="d-block w-25 d-flex mx-auto justify-content-center" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="img/camisa.png" class="d-block w-25 mx-auto d-flex justify-content-around" alt="...">
-                                </div>
-                                <div class="carousel-item">
-                                    <img src="img/copas.png" class="d-block w-25 mx-auto d-flex justify-content-center" alt="...">
-                                </div>
-                            </section>
+                            <div class="carousel-item active">
+                                <img src="img/icono_pizza.png" class="d-block w-25 d-flex mx-auto" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/camisa.png" class="d-block w-25 d-flex mx-auto" alt="...">
+                            </div>
+                            <div class="carousel-item">
+                                <img src="img/copas.png" class="d-block w-25 d-flex mx-auto" alt="...">
+                            </div>
                         </div>
-                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="prev">
+                        <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
+                            data-bs-slide="prev">
                             <span class="carousel-control-prev-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Previous</span>
                         </button>
-                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying" data-bs-slide="next">
+                        <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleAutoplaying"
+                            data-bs-slide="next">
                             <span class="carousel-control-next-icon" aria-hidden="true"></span>
                             <span class="visually-hidden">Next</span>
                         </button>
                     </div>
                 </section>
             </section>
+        </div>
+    </div>
 
-    </div>
-</div>
-
-<section class="d-flex">
-    <div>
-        <button class="boton1">
-            <i class="fa-brands fa-facebook h1"></i>
-        </button>
-    </div>
-    <div>
-        <button class="boton1">
-            <i class="fa-brands fa-instagram h1"></i>
-        </button>
-    </div>
-    <div>
-        <button class="boton1">
-            <i class="fa-brands fa-twitter h1"></i>
-        </button>
-    </div>
+    <!-- Botones Sociales -->
     <section class="d-flex">
         <div>
             <button class="boton1">
-                <i class="fa-brands fa-facebook h1"></i>
+                <a href="https://www.facebook.com/?locale=es_LA"><i class="fa-brands fa-facebook h1 fw-bold text-dark"></i></a>
             </button>
         </div>
         <div>
             <button class="boton1">
-                <i class="fa-brands fa-instagram h1"></i>
+                <a href="https://www.instagram.com/"><i class="fa-brands fa-instagram h1 fw-bold text-dark"></i></a>
             </button>
         </div>
         <div>
             <button class="boton1">
-                <i class="fa-brands fa-twitter h1"></i>
+                <a href="https://x.com/?lang=es"><i class="fa-brands fa-twitter h1 fw-bold text-dark"></i></a>
             </button>
         </div>
     </section>
-    <script
-        src="https://code.jquery.com/jquery-3.7.1.min.js"
-        integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
-        crossorigin="anonymous"
-    ></script>
-    <script
-        src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
-        integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
-        crossorigin="anonymous"
-        referrerpolicy="no-referrer"
-    ></script>
-    <script
-        src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"
-    ></script>
-    <script>
-        $(".slider-opciones").slick({
-            slidesToShow: 1,
-            slidesToScroll: 1,
-            autoplay: true,
-            autoplaySpeed: 2000,
-        });
-    </script>
 </section>
 
+<!-- Scripts -->
+<script src="https://code.jquery.com/jquery-3.7.1.min.js"
+    integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo=" crossorigin="anonymous"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js"
+    integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A=="
+    crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+<script>
+    $(".slider-opciones").slick({
+        slidesToShow: 1,
+        slidesToScroll: 1,
+        autoplay: true,
+        autoplaySpeed: 2000,
+    });
+</script>
 
